--- a/app/views/profiles/show/_user_overview.html.erb
+++ b/app/views/profiles/show/_user_overview.html.erb
@@ -8,11 +8,11 @@
   <div class="panel-heading">
   	<%= @profile.user.name %> 
   	<%=t  '.overview'  %>
-		<% if current_user && current_user.can_follow?(user) %>
+		<% if current_user && current_user.can_follow?(@profile.user) %>
 			<div class="follow pull-<%= lang_other_side %>"><%= follow_button user %></div> 
 		<% end %>
   </div>
-
+ 
 	<% if current_user %>
 		<table class="table">
 			<tbody>
