fix bug, user overview user variable

--- a/app/views/profiles/show/_user_overview.html.erb
+++ b/app/views/profiles/show/_user_overview.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.is_admin? %>
+<% if current_user && current_user.is_admin? %>
 	<% user = @profile.user %>
 <% else %>
 	<% user = current_user %>
