add title to subtrips overviews

--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -9,6 +9,14 @@
 	right: 42%;
 }
 
+.trip{
+	.subtrips-header{
+		border-bottom: 1px solid #DDDDDD;
+		margin-bottom: 9px;
+		padding-bottom: 3px;
+	}
+}
+
 #trips-register-head{
 	padding: 0;
 	table{
