--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,4 @@
-<div id="trip_show" class="">
+<div id="trip_show" class="trip">
 	<div class="col-md-8">
 		<div class="panel panel-default">
   		<%= render partial: 'trips/shared/head', locals:{stage: 5} %>
