--- a/app/views/notification_mailer/_style.html.erb
+++ b/app/views/notification_mailer/_style.html.erb
@@ -5,24 +5,24 @@
 		text-align: <%= @lang_side %>;
 	}
 	
-	#comment_notification_to_shout_owner	#comment{
+	.comment_notification	#comment{
 			width: 523px;
 	}
-	#comment_notification_to_shout_owner	#comment .gravatar{
+	.comment_notification	#comment .gravatar{
 		border-radius: 4px;
 		border: 1px solid #E7E7E7;
 		padding: 1px;
 	}
 
-	#comment_notification_to_shout_owner	#comment #body{
+	.comment_notification	#comment #body{
 			padding: 20px;
 	}
 
-#comment_notification_to_shout_owner #see_post{
+.comment_notification #see_post{
 	text-align: center;
 }
 
-	#comment_notification_to_shout_owner	td{
+	.comment_notification	td{
 		padding-top: 19px;	
 	}
 
