--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,14 +1,14 @@
 <div id="comments" class="pull-<%= lang_other_side %>">
 	<% comments.each do |comment| %>
 		<div class="single media">
-			<%= link_to (gravatar comment.writer, size = 35, klass = "img-rounded media-object"), profile_url( comment.writer), class: "pull-right" %>
+			<%= link_to (gravatar comment.writer, size = 35, klass = "img-rounded media-object"), profile_url( comment.writer), class: "pull-#{lang_side}" %>
 		  <div class="media-body">
 		    <small  class="media-heading">
 					<%= link_to (comment.writer.name), profile_url( comment.writer) %>
 		    </small>
 
 		    <small><%= simple_format comment.body %></small> 
-				<span class="text-muted"><%= time_ago_in_words(comment.created_at) %> <%=t("ago")  %></span>
+				<span class="meta text-muted pull-<%= lang_other_side %>"><%= time_ago_in_words(comment.created_at) %> <%=t("ago")  %></span>
 		  </div>
 		</div>		
 	<% end %>
