--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -7,8 +7,8 @@
 				<%= render partial: 'shouts/shout/action_nav', locals:{shout: shout} %>
 				<div class="content">
 					<%= render shout.try(:content) %>
-					<span class="meta">
-						<span class="text-muted"><%= time_ago_in_words(shout.created_at) %> <%=t("ago")  %></span>
+					<span class="meta pull-<%= lang_other_side %>">
+						<span class="text-muted"><%= t 'posted_at' %> <%= time_ago_in_words(shout.created_at) %> <%=t("ago")  %></span>
 						<%# if can? :destroy, shout.content %>					
 					</span>	
 				</div> 
