--- a/app/views/profiles/show/_large_screens.html.erb
+++ b/app/views/profiles/show/_large_screens.html.erb
@@ -7,8 +7,8 @@
 	<%= render partial: 'profiles/show/single_profile', locals: {user: user}  %>
 	<%= render partial: 'vehicles/show', locals: {user: user} %>
 	<% if current_user %>
-		<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: t('followed_users_by', user: user.name)} %>
-		<%= render partial: 'shared/users_list', locals: {users: @followers, title: t('followers_of', user: user.name)} %>
+		<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: t('followed_users_by', user: user.name), random_user: false} %>
+		<%= render partial: 'shared/users_list', locals: {users: @followers, title: t('followers_of', user: user.name), random_user: false} %>
 
 	<% end %>
 </div>
