--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -17,32 +17,47 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 #top-search-form{
 	input{
 		width: 100%;
+		font-weight: bold;
 	}
-	.origin_input .glyphicon-map-marker{
-		color: #b7c635;
+	select{
+		font-weight: bold;
 	}
-	.destination_input .glyphicon-map-marker{
-		color: #bc2328;
+	.datepicker-input{
+		margin-top: 8px;
+		input{
+			padding-right: 40px;
+			width: 140px;
+		}
+		.ui-datepicker-trigger{
+			border: medium none;
+			position: absolute;
+			right: 16px;
+			top: 6px;
+		}
+	}
+
+	.origin_input .glyph-map{
+		background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png') no-repeat;
+		background-position: 0px -189px;
+
+	}
+	.destination_input .glyph-map{
+		background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png') no-repeat;
+		background-position: 0px -160px;
 	}
   .origin_input, .destination_input{
-  	input{
+    .glyph-map{
+	  	width: 13px;
+	  	height: 30px;
+	  	margin: 0 7px;
+	  	position: absolute;
+	  }
+ 		input{
 	  	padding-right: 25px;
+	  	padding-left: 25px;
   	}
 	  .form-group{
 			width: 100%;
-		}
-		.glyphicon-map-marker{
-			position: absolute;
-			position: absolute;
-			font-size: 1.3em;
-			top: 6px;
-			right: 21px;			
-		}
-		.select2_input a{
-			border-top-left-radius: 0px;
-			border-bottom-left-radius: 0px;				
-			border-top-right-radius: 4px;
-			border-bottom-right-radius: 4px;
 		}
 		.cycle{
 			position: absolute;
@@ -92,18 +107,6 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 //   top: 3px; 		
 // }
 
-.datepicker-input{
-	input{
-		padding-right: 40px;
-		width: 140px;
-	}
-	.ui-datepicker-trigger{
-		border: medium none;
-		position: absolute;
-		right: 16px;
-		top: 6px;
-	}
-}
 
 #search_subtrips{
 	.no-trip{
