--- a/app/assets/stylesheets/costum.css.scss
+++ b/app/assets/stylesheets/costum.css.scss
@@ -29,9 +29,9 @@ body{
  
 #footer{
   height: 60px;
+  position: relative;
   .container {
     ul{
-      background: red;
       list-style: none;
       display: inline;
       li{
@@ -41,7 +41,29 @@ body{
     }       
   }
 
+  #social{
+    position: absolute;
+    top: 12px;
+    right: 44%;
+    li{
+      width:  30px;
+      height: 30px;
+    }
+    #facebook-link{
+      background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png') no-repeat;
+      background-position: 0px -255px;
+    }
+    #twitter{
+      background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png') no-repeat;
+      background-position: 0px -294px;
+    }
+    #gplus{
+      background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png') no-repeat;
+      background-position: 0px -220px;
+    }
+  }
 }
+
 
 @media (min-width: 750px) {
     #siteHeader{
