--- a/app/views/transportation_companies/_form.html.erb
+++ b/app/views/transportation_companies/_form.html.erb
@@ -3,8 +3,10 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.input :slug %>
     <%= f.input :tel %>
     <%= f.input :email %>
+    <%= f.input :website %>
     <%= f.input :image %>
     <%= f.input :cover %>
   </div>
