--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @branch %> |
-<%= link_to 'Back', branches_path %>
+<%= link_to 'Show', [@company, @branch] %> |
+<%= link_to 'Back', company_branches_path %>
