--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@transportation_company) do |f| %>
+<%= simple_form_for(@company) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
