--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -36,11 +36,11 @@
 </p>
 
 <p>
-  <strong>Transportation company:</strong>
-  <%= @branch.transportation_company.name %>
+  <strong> company:</strong>
+  <%= @branch.company.try(:name) %>
 </p>
 <p>
   <%= image_tag( @branch.cover.url(:large), alt: @branch.name ,size: "851x315") %>
 </p>
-<%= link_to 'Edit', edit_branch_path(@branch) %> |
-<%= link_to 'Back', branches_path %>
+<%= link_to 'Edit', edit_company_branch_path %> |
+<%= link_to 'Back', company_branches_path %>
