--- a/app/views/branches/show/_small_screens.html.erb
+++ b/app/views/branches/show/_small_screens.html.erb
@@ -1,20 +1,14 @@
-<!-- --       Larg Screen      -- -->
-<div id="sidebar" class="col-md-4">
-  <%= render partial: 'profiles/show/avatar_and_brief_for_large_screen', locals: {user: user}  %>
-
+<!-- --       Small Screen     -- -->
+<div class=" hidden-lg "> 
+	<%= render partial: 'profiles/show/cover', locals: {user: user}   %>
+	<%= flash_creator flash %>
 	<%= render partial: 'profiles/show/user_overview', locals: {user: user}  %>
-
 	<%= render partial: 'profiles/show/single_profile', locals: {user: user}  %>
 	<%= render partial: 'vehicles/show', locals: {user: user} %>
 	<% if current_user %>
 		<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: t('followed_users_by', user: user.name), random_user: false} %>
 		<%= render partial: 'shared/users_list', locals: {users: @followers, title: t('followers_of', user: user.name), random_user: false} %>
-
 	<% end %>
-</div>
-<div id="leftContent" class="col-md-8">
-	<%= render partial: 'profiles/show/cover', locals: {user:user} %>
-	<%= flash_creator flash %>
 
 	<%= render partial: 'shared/posts_panel', locals: {objs:@profile.timeline} %>
 
