--- a/app/views/profiles/show/_small_screens.html.erb
+++ b/app/views/profiles/show/_small_screens.html.erb
@@ -1,5 +1,5 @@
 <!-- --       Small Screen     -- -->
-<div class=" hidden-lg "> 
+<div class=" hidden-md "> 
 	<%= render partial: 'profiles/show/cover', locals: {user: user}   %>
 	<%= flash_creator flash %>
 	<%= render partial: 'profiles/show/user_overview', locals: {user: user}  %>
