--- a/app/assets/stylesheets/branches.css.scss
+++ b/app/assets/stylesheets/branches.css.scss
@@ -1,4 +1,30 @@
-/*
-  Place all the styles related to the matching controller here.
-  They will automatically be included in application.css.
-*/
+#branches_show{
+	.logo{
+		img{
+			background: #c9c9c9;
+			border-radius: 5px;
+		}
+		border: 1px solid #E2E2E2;
+		padding: 1px;
+		border-radius: 5px;
+	}
+	#large-screen{
+		#sidebar{
+			padding-top: 15px;
+		}
+		.name-of-branch{
+			text-align: center;
+			margin: 20px 0 30px;
+			font-size: 1.8em;
+			font-weight: bold;
+			a{
+				color: #1C6852;
+			}
+		}
+
+	}
+
+	#small-screen{
+
+	}
+}
