add driver list, add-driver to branch form, posts to branch show

--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :address %>
     <%= f.input :email %>
     <%= f.input :tel %>
+    <%= f.input :mobile %>
     <%= f.input :city %>
     <%= f.association :manager %>
     <%= f.association :company %>
