--- a/app/views/branches/show/_cover.html.erb
+++ b/app/views/branches/show/_cover.html.erb
@@ -1,7 +1,7 @@
 <div id='cover'>
 	<div class="coverImage">
 		<%= image_tag(@branch.mycover.url(:large), 
-				alt:"#{@branch.name} in hamsafaryab.com", class: "img-responsive") %>
+				alt:"#{@branch.name} ", class: "img-responsive") %>
 	</div>
 
 	<%# if current_user && current_user.can_follow?(user) %>
