--- a/app/views/branches/show/_large_screens.html.erb
+++ b/app/views/branches/show/_large_screens.html.erb
@@ -4,7 +4,14 @@
 
 	<%= render 'branches/show/branch_overview' %>
 
-	<%= render partial: 'branches/show/single_branch'  %>
+	<%= render 'branches/show/single_branch'  %>
+	
+	<% if can? :edit, @branch %>
+		<%= render 'branches/show/add_driver' %>
+	<% end %>
+
+	<%= render partial: 'branches/show/drivers_list', locals: {users: @drivers} %>
+
 	<% if current_user %>
 		<%#= render partial: 'shared/users_list', locals: {users: @followers, title: t('followers_of', user: user.name), random_user: false} %>
 	<% end %>
@@ -12,8 +19,8 @@
 
 <div id="left-content" class="col-md-8">
 	<%= render 'branches/show/cover'%>
-	<%#= flash_creator flash %>
+	<%= flash_creator flash %>
 
-	<%#= render partial: 'shared/posts_panel', locals: {objs:@profile.timeline} %>
+	<%= render partial: 'shared/posts_panel', locals: {objs:@branch.timeline} %>
 
 </div>
