--- a/app/views/branches/show/_single_branch.html.erb
+++ b/app/views/branches/show/_single_branch.html.erb
@@ -23,8 +23,8 @@
 				<th><%=  @branch.tel %></th>
 			</tr>
 			<tr>
-				<th><%#= Branch.human_attribute_name("mobile") %></th>
-				<th><%#=  @branch.mobile %></th>
+				<th><%= t "mobile" %></th>
+				<th><%=  @branch.mobile %></th>
 			</tr>
 			<tr>
 				<th><%= t("email") %></th>
