--- a/app/views/user_mailer/booking_request_to_driver.html.erb
+++ b/app/views/user_mailer/booking_request_to_driver.html.erb
@@ -60,7 +60,7 @@
 	<table>
 		<tbody>
 			<tr>
-				<th class="buttons" style=""><%= link_to t("accept"), @accept_url, {class: "button"} %></th>
+				<th class="buttons" style="min_width: 400px;"><%= link_to t("accept"), @accept_url, {class: "button"} %></th>
 				<th class="buttons" style=""><%= link_to t("reject"), @reject_url, {class: "button"} %></th>
 			</tr>
 		</tbody>
